Fixing job post alignment

--- a/css/cpajobs.less
+++ b/css/cpajobs.less
@@ -3700,9 +3700,6 @@ a.flex-tab.active { color: #fff;}
         margin-right: 0;
         width: 100%;
     }
-    .flex-mtrout {
-	    margin-top: 18px;
-	}
 
 
 
